@@ -1,0 +1,95 @@
+<!-- $Id$ -->
+<Deployment:DeploymentPlan
+  xmlns:Deployment="http://www.omg.org/Deployment"
+  xmlns:xmi="http://www.omg.org/XMI"
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://www.omg.org/Deployment Deployment.xsd">
+  <label>SimpleComponent_Home</label>
+  <UUID>SimpleComponent_Home</UUID>
+
+  <!-- Implementations declarations -->
+
+  <!-- Server Dance implementation-->
+  <implementation xmi:id="Launch_FailureComponentImplementation">
+    <name>Launch_FailureComponentImplementation</name>
+    <source/>
+    <artifact xmi:idref="Launch_Failure_ExecArtifact" />
+    <artifact xmi:idref="Launch_Failure_SvntArtifact" />
+    <execParameter>
+      <!-- entrypoint as exec parameter (see §10.6.1) -->
+      <name>component factory</name>
+      <value>
+        <type>
+          <kind>tk_string</kind>
+        </type>
+        <value>
+          <string>create_Launch_Failure_Impl</string>
+        </value>
+      </value>
+    </execParameter>
+    <execParameter>
+      <name>edu.vanderbilt.dre.CIAO.ServantEntrypoint</name>
+      <value>
+        <type>
+          <kind>tk_string</kind>
+        </type>
+        <value>
+          <string>create_Launch_Failure_Servant</string>
+        </value>
+      </value>
+    </execParameter>
+    <execParameter>
+      <name>edu.vanderbilt.dre.CIAO.ServantArtifact</name>
+      <value>
+        <type>
+          <kind>tk_string</kind>
+        </type>
+        <value>
+          <string>Launch_Failure_svnt</string>
+        </value>
+      </value>
+    </execParameter>
+    <execParameter>
+      <name>edu.vanderbilt.dre.CIAO.ExecutorArtifact</name>
+      <value>
+        <type>
+          <kind>tk_string</kind>
+        </type>
+        <value>
+          <string>Launch_Failure_exec</string>
+        </value>
+      </value>
+    </execParameter>
+  </implementation>
+
+  <instance xmi:id="Launch_FailureComponentInstanceOne">
+    <name>Launch_FailureComponent_One</name>
+    <node>NodeOne</node>
+    <!-- hostname -->
+    <source/>
+    <implementation xmi:idref="Launch_FailureComponentImplementation" />
+  </instance>
+
+  <instance xmi:id="Launch_FailureComponentInstanceTwo">
+    <name>Launch_FailureComponent_Two</name>
+    <node>NodeTwo</node>
+    <!-- hostname -->
+    <source/>
+    <implementation xmi:idref="Launch_FailureComponentImplementation" />
+  </instance>
+
+  <!-- Artifacts declarations -->
+  <artifact xmi:id="Launch_Failure_ExecArtifact">
+    <name>Launch_Failure_exec</name>
+    <source/>
+    <node/>
+    <location>Launch_Failure_exec</location>
+  </artifact>
+  <artifact xmi:id="Launch_Failure_SvntArtifact">
+    <name>Launch_Failure_svnt</name>
+    <source/>
+    <node/>
+    <location>Launch_Failure_svnt</location>
+  </artifact>
+
+  </Deployment:DeploymentPlan>
